<resources>
    <string name="app_name">distanceConverter</string>
    <string name="clear">clear</string>
    <string name="kilometers_to_miles">Kilometers to Miles:</string>
    <string name="conversation_history">Conversation History:</string>
    <string name="kilometers_value">Kilometers Value:</string>
    <string name="miles_value">Miles Value:</string>
    <string name="miles_to_kilometers">Miles to Kilometers</string>
    <string name="conversion">Conversion:</string>
    <string name="convert">Convert</string>
    <string name="answerLabel"></string>
</resources>