<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".MainActivity">




    <TextView
        android:id="@+id/historytextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conversation_history"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.355"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answerOutputLabel" />

    <TextView
        android:id="@+id/kilometertextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kilometers_value"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/milestextView"
        app:layout_constraintTop_toBottomOf="@+id/convertButton"
        app:layout_constraintVertical_bias="0.034" />

    <TextView
        android:id="@+id/milestextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/miles_value"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/metricGroupOption"
        app:layout_constraintVertical_bias="0.083" />

    <EditText
        android:id="@+id/milesouputLabel"
        android:layout_width="133dp"
        android:layout_height="68dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/darker_gray"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="numberSigned|number|numberDecimal"
        android:labelFor="@id/milestextView"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.764"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/metricGroupOption"
        app:layout_constraintVertical_bias="0.053" />

    <Button
        android:id="@+id/convertButton"
        android:layout_width="401dp"
        android:layout_height="47dp"
        android:onClick="calculate"
        android:text="@string/convert"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/milesouputLabel"
        app:layout_constraintVertical_bias="0.016" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:onClick="clear"
        android:text="@string/clear"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conversiontextView"
        app:layout_constraintVertical_bias="0.272" />

    <TextView
        android:id="@+id/conversiontextView"
        android:layout_width="0dp"
        android:layout_height="165dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/darker_gray"
        android:scrollbars="vertical"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/historytextView"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="219dp" />

    <TextView
        android:id="@+id/converstiontextView"
        android:layout_width="99dp"
        android:layout_height="38dp"
        android:text="@string/conversion"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/milestextView"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.264" />

    <RadioGroup
        android:id="@+id/metricGroupOption"
        android:layout_width="171dp"
        android:layout_height="90dp"
        android:checkedButton="@id/milesOption"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.626"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047">

        <RadioButton
            android:id="@+id/milesOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="radioOnClick"
            android:text="@string/miles_to_kilometers" />

        <RadioButton
            android:id="@+id/kilometersOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="radioOnClick"
            android:text="@string/kilometers_to_miles" />
    </RadioGroup>

    <TextView
        android:id="@+id/answerOutputLabel"
        android:layout_width="144dp"
        android:layout_height="50dp"
        android:background="@android:color/darker_gray"
        android:includeFontPadding="true"
        android:paddingTop="10dp"
        android:text="@string/answerLabel"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.626"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/convertButton"
        app:layout_constraintVertical_bias="0.038" />

</androidx.constraintlayout.widget.ConstraintLayout>